--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,13 @@ android {
     }
 }
 
+allprojects {
+    //引入MPAndroidChart用
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -37,4 +44,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'org.jsoup:jsoup:1.11.3'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'//曲線圖
 }
