--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,9 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.3'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'//曲線圖
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0' //retrofit 串接api網路套件 版本先固定使用不升級
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'//retrofit 串接api網路套件 版本先固定使用不升級
+    implementation("com.squareup.okhttp3:logging-interceptor:3.14.2")
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 }
